[package]
name = "jump-kun"
version = "0.4.13"
authors = ["TakaakiFuruse <takaakifuruse@gmail.com>"]
edition = "2018"
description = "A simple directory jumper made by rust."
repository = "https://github.com/TakaakiFuruse/jump-kun"
license = "MIT"

[[bin]]
name = "jump-kun"
path = "src/main.rs"

[dependencies]
jump-kun-macros={version = "0.1.13", path = "jump-kun-macros"}
jwalk= "0.8.1"
skim = "0.10.4"
serde_json= "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
dirs = "5.0.1"
sled = "0.34.7"
ignore = "0.4.20"
anyhow = "1.0.75"
