[package]
name = "jump-kun-macros"
version = "0.1.15"
authors = ["TakaakiFuruse <takaakifuruse@gmail.com>"]
edition = "2018"
description = "A crate for jump-kun. Parses jump-kun config file and creates fucntions."
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["extra-traits", "full"] }
proc-macro2 = "1.0.51"
quote = "1.0.23"
toml = "0.7.2"
dirs = "4.0.0"
