[package]
name = "jump-kun-macros"
version = "0.1.16"
authors = ["TakaakiFuruse <takaakifuruse@gmail.com>"]
edition = "2018"
description = "A crate for jump-kun. Parses jump-kun config file and creates fucntions."
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.87", features = ["extra-traits", "full"] }
proc-macro2 = "1.0.89"
quote = "1.0.37"
toml = "0.8.19"
dirs = "5.0.1"
